# wickra-feature-store

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/requirements/: ci-dev.in
.github/workflows/: bench.yml  ci.yml  codeql.yml  links.yml  release.yml  scorecard.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_feature_store.h
bindings/c/src/: lib.rs
bindings/csharp/WickraFeatureStore/: DllResolver.cs  FeatureStore.cs  Native.cs  README.md  WickraFeatureStore.csproj
bindings/csharp/WickraFeatureStore.Tests/: FeatureStoreTests.cs  GoldenTests.cs  WickraFeatureStore.Tests.csproj
bindings/go/: README.md  feature_store_test.go  go.mod  golden_test.go  wickra.go
bindings/go/include/: wickra_feature_store.h
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/featurestore/: FeatureStore.java  Native.java
bindings/java/src/test/java/org/wickra/featurestore/: FeatureStoreTest.java  GoldenTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  feature_store.test.js  golden.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_feature_store/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: feature_store.R
bindings/r/src/: Makevars  Makevars.win  wickra_feature_store.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: golden.test.js
crates/feature-store-bench/: Cargo.toml
crates/feature-store-bench/benches/: feature_store.rs
crates/feature-store-cli/: Cargo.toml
crates/feature-store-cli/src/: args.rs  main.rs  run.rs
crates/feature-store-cli/tests/: cli.rs
crates/feature-store-core/: Cargo.toml
crates/feature-store-core/src/: arrow_out.rs  build.rs  config.rs  error.rs  feature.rs  feature_store.rs  indicator_set.rs  label.rs  lib.rs  matrix.rs  scaling.rs  spec.rs  symbol_state.rs  universe.rs
crates/feature-store-core/tests/: arrow_roundtrip.rs  conformance.rs  golden.rs  labels.rs  proptest_invariants.rs  streaming_eq_batch.rs
crates/feature-store-core/tests/common/: mod.rs
docs/: Cookbook.md  FEATURES.md  LABELS.md  OUTPUT_FORMATS.md  SCALING.md  STREAMING.md
examples/: README.md
examples/c/: CMakeLists.txt  build_features.c  build_features.cpp
examples/csharp/BuildFeatures/: BuildFeatures.csproj  Program.cs
examples/data/specs/: momentum.json
examples/data/universe/: AAA.csv  BBB.csv
examples/go/: build_features.go  go.mod
examples/java/: BuildFeatures.java
examples/node/: build_features.js  package.json
examples/python/: build_features.py
examples/r/: build_features.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: build_matrix.rs  feature_eval.rs  label_compute.rs  spec_parse.rs
golden/: README.md  data.json
golden/expected/: microstructure.json  momentum_features.json  scaled.json  streaming.json  triple_barrier.json
golden/specs/: microstructure.json  momentum_features.json  scaled.json  streaming.json  triple_barrier.json
