[package]
name = "wickra-feature-store-wasm"
description = "WebAssembly bindings for wickra-feature-store — build feature matrices in the browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Modern rustc emits a wasm feature set (bulk-memory, sign-ext, …) that the
# wasm-opt bundled with wasm-pack is too old to validate. The wasm-bindgen output
# is already valid and functional; skip the optional size-only optimizer pass.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true

[dependencies]
# The feature-store core as a direct path dep (not `workspace = true`) so
# `default-features = false` is honored — cargo silently ignores it on an
# inherited workspace dependency. Default features off means no rayon (the WASM
# sequential fold) and no arrow (columnar output is native-only), so a wasm build
# is byte-identical to the native one — the exact cross-language golden check.
feature-store-core = { path = "../../crates/feature-store-core", version = "0.1.0", default-features = false }
wasm-bindgen = "0.2"

# The backtester's seeded RNG (via `rand`) pulls in `getrandom`, which needs its
# JS-backed entropy source to compile for `wasm32-unknown-unknown`. The feature
# fold never draws from entropy, so this backend is never actually called — it
# only satisfies the build.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
