[package]
name = "feature-store-bench"
description = "Criterion benchmarks for the Wickra Feature Store core: build scaling by symbol count, feature count and label count, on the parallel and sequential engines, plus JSON serialization."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Default features off (inherited from the workspace edge); the `parallel`
# feature below re-enables rayon so the default bench measures the parallel path
# and `--no-default-features` measures the sequential (WASM) path.
feature-store-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["parallel"]
parallel = ["feature-store-core/parallel"]

[[bench]]
name = "feature_store"
harness = false
